# src/main/java/org/eclipsefoundation/react/request/MembershipFormResource.java
@@ -111,4 +111,25 @@ public class MembershipFormResource extends AbstractRESTResource {
         dao.delete(new RDBMSQuery<>(wrap, filters.get(MembershipForm.class), params));
         return Response.ok().build();
     }
+
+    @POST
+    @Path("{id}/complete")
+    public Response completeForm(@PathParam("id") String formID) {
+        // create parameter map
+        MultivaluedMap<String, String> params = new MultivaluedMapImpl<>();
+        params.add(DefaultUrlParameterNames.ID.getName(), formID);
+        params.add(MembershipFormAPIParameterNames.USER_ID.getName(), ident.getPrincipal().getName());
+
+        // retrieve the possible cached object
+        List<MembershipForm> results = dao.get(new RDBMSQuery<>(wrap, filters.get(MembershipForm.class), params));
+        if (results == null) {
+            return Response.serverError().build();
+        } else if (results.isEmpty()) {
+            return Response.status(404).build();
+        }
+
+        // TODO actual action here
+
+        return Response.ok().build();
+    }
 }
